%% FASE 3 — OPSI 2 ER: tambah tabel transisi append-only
%% `selesai` TIDAK dihapus — ia jadi cache turunan, supaya kontrak
%% frontend (useWorkOrder.js:21 wo.selesai) tetap utuh.
%% render: mmdc -i 03-tobe-2-er.mmd -o 03-tobe-2-er.svg
erDiagram

  WorkOrder ||--o{ WorkOrderTransisi     : "transisi (PROTECT) — BARU, append-only"
  WorkOrder ||--o| DetailPesananProduksi : "detail_produksi (1-1)"
  WorkOrder ||--o{ WorkOrderPenugasan    : "penugasan"
  WorkOrder ||--o{ WorkOrderPesan        : "pesan_chat"

  Profil ||--o{ WorkOrder          : "dibuat_oleh (PROTECT)"
  Profil ||--o{ WorkOrderTransisi  : "aktor (PROTECT)"
  Profil ||--o{ WorkOrderPenugasan : "staff (PROTECT)"
  Profil ||--o{ WorkOrderPesan     : "pengirim (PROTECT)"

  CounterDokumen ||--o{ WorkOrder : "sumber nomor"

  WorkOrder {
    bigint  id                  PK
    varchar nomor               "unique, dari CounterDokumen"
    varchar status              "BARU: BARU|BERJALAN|SELESAI|DIBATALKAN (TextChoices)"
    bool    selesai             "CACHE turunan = (status=='SELESAI') — kontrak frontend"
    varchar kategori            "UMUM|PRODUKSI|PRIVATE"
    varchar judul
    text    deskripsi
    varchar aturan_penyelesaian "SALAH_SATU|SEMUA|PIC — read_only setelah ada transisi"
    date    tanggal
    date    deadline            "null"
    text    catatan_selesai     "cache dari transisi terakhir"
    datetime waktu_selesai      "cache dari transisi terakhir"
    bigint  diselesaikan_oleh   FK "cache dari transisi terakhir"
    bigint  dibuat_oleh         FK
    datetime dibuat_pada
    datetime diubah_pada
  }

  WorkOrderTransisi {
    bigint   id              PK
    bigint   work_order      FK "PROTECT — event tidak boleh hilang bersama WO"
    varchar  dari_status     "null untuk event pertama"
    varchar  ke_status
    bigint   aktor           FK "PROTECT"
    text     alasan          "catatan dari payload approve"
    varchar  idempotency_key "UNIQUE — pola yang sudah benar di MutasiStok/MutasiKas"
    datetime dibuat_pada     "auto_now_add"
  }

  WorkOrderPenugasan {
    bigint id                  PK
    bigint work_order          FK
    bigint staff               FK "PROTECT"
    bool   is_pic              "partial unique: tepat 1 per WO"
    bool   is_selesai_personal
  }

  WorkOrderPesan {
    bigint   id         PK
    bigint   work_order FK
    bigint   pengirim   FK "PROTECT"
    text     teks
    datetime dibuat_pada
  }

  DetailPesananProduksi {
    bigint  id         PK
    bigint  work_order FK
    varchar nama_item
    varchar unit
    varchar stiker
  }

  CounterDokumen {
    bigint  id     PK
    varchar jenis  "'WO'"
    int     urutan
  }

  Profil {
    bigint  id PK
    varchar username
    varchar nama_lengkap
  }
